reflectapi-demo/tests/errors/invalid_reflect_attribute_path.stderr
error: expected `=`
 --> tests/errors/invalid_reflect_attribute_path.rs:3:29
  |
3 |     #[reflectapi(output_type)]
  |                             ^
